# yume

./: .env.production  .gitignore  .npmrc  .yume-started  .yurucode-started  APP_SIZE_OPTIMIZATIONS_COMPLETED.md  BETTER-SESSION-RECOVERY.md  BUILD-SUCCESS.md  BUILD-WIN.bat  BUILD.bat  BUILD_INSTRUCTIONS.md  BUILD_WINDOWS.md  CHANGELOG.md  CHECK-LOGS.bat  CHECK-VITE.bat  CLAUDE-BASH-CWD-ISSUE.md  CLAUDE.md  CLAUDE_CODE_2.0_FEATURES.md  CLAUDE_WRAPPER_FEATURES_RESEARCH.md  CLAUDIA_YURUCODE_EXHAUSTIVE_COMPARISON.md  COMPACT_FIX_SUMMARY.md  COMPACT_FIX_V2.md  COMPACT_PRD.md  COMPACT_TOKEN_FIX_PRD.md  COMPETITIVE_STRATEGY.md  DEBUG-VITE.bat  DEBUG_SERVER.md  DICTATION_PRD.md  Dockerfile.linux  FINAL-STATUS.md  FIX-SESSION-RESUME.md  FIX-WORKING-DIR.md  INSTALL.md  MIGRATION-SUMMARY.md  MULTI_INSTANCE.md  PRD-TAURI-MIGRATION.md  PRD_SERVER_ALIGNMENT.md  PRODUCTION_DEBUG.md  README.md  README_COMPREHENSIVE.md  (+154 more)
.yume/: compact.json
.yurucode/: compact.json
claude-code-webui-main/: .gitignore  .lefthook.yml  .mcp.json  .tagpr  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md
claudia/: .gitignore  README.md  index.html  package-lock.json  package.json
competitor-research/: ACQUISITION-PITCH.md  ACQUISITION-ROADMAP.md  COMPARISON-MATRIX.md  FEATURE-ROADMAP.md  MINIMALISM-SPEED-UX.md  README.md  SPEED-GAPS.md  ULTRATHINK-ANALYSIS.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  COMPETITIVE_ANALYSIS.md  COMPLETE_ARCHITECTURE.md  DOCUMENTATION_UPDATE_SUMMARY.md  FEATURES_COMPLETE.md  IMPLEMENTATION-PLAN-Advanced-Flow.md  IMPLEMENTATION-VERIFICATION-Compaction.md  MASTER_DOCUMENTATION_INDEX.md  MEMORY_V2.md  PRD-05-Advanced-Claude-Flow.md  PRD-07-ULTRA-DETAILED-PLATFORM-GUIDE.md  PRD-07-Yurucode-Feature-Parity-Roadmap.md  PROCESS_WRAPPER_SOLUTION.md  PRODUCTION_DEPLOYMENT.md  PROJECT_STATUS.md  TROUBLESHOOTING_GUIDE.md  WRAPPER-V2-COMPLETE.md  YUME_GRADE_REPORT.md  YURUCODE_GRADE_REPORT.md  compact-cross-platform-comparison.md  compact-empty-result-analysis.md  compact-implementation-analysis.md  compact-wrapper-PRD.md  compact-wrapper-documentation.md  compact-wrapper-implementation.md  compact-wrapper-quickstart.md  index.html  token-state-integration-PRD.md
electron/: main.js  preload-debug.js  preload-fixed.js  preload-simple.js  preload.js
public/: polyfills.js
releases/: releases.json  v0.1.0-release-notes.md  v0.1.1-release-notes.md  v0.1.2-release-notes.md  v0.1.3-release-notes.md  v0.1.4-release-notes.md  v0.1.5-release-notes.md  v0.1.6-release-notes.md  v0.1.7-release-notes.md  v0.2.0-release-notes.md  v0.2.1-release-notes.md  v0.2.2-release-notes.md  v0.2.3-release-notes.md  v0.2.4-release-notes.md  v0.2.5-release-notes.md
scripts/: WRAPPER_INTEGRATION.md  WRAPPER_QUICKSTART.md  add-macos-permissions.sh  afterPack.js  all-dependencies.txt  allocate-port.mjs  apply-wrapper-to-server.cjs  build-linux-docker.sh  build-pkg.sh  build-server-binary.cjs  build-unified-binary.cjs  bundle-macos-server.js  bundle-server-resources.js  bundle-windows-server.js  bundle-wrapper-for-embed.cjs  claude-compact-wrapper-v2.js  claude-compact-wrapper.js  claude-process-wrapper.cjs  convert-images-webp.js  create-windows-ico.py  delay-start.js  embed-fonts.cjs  embedded-wrapper-inject.cjs  enable-features.cjs  ensure-server.cjs  find-all-deps-recursive.cjs  find-all-deps.js  fix-agents-css.cjs  fix-dmg-build.sh  fix-macos-name.js  fix-signature.sh  fix-yume-mac.sh  generate-icons.cjs  generate-windows-icon.js  inject-version.cjs  integrate-wrapper-macos.js  kill-ports.cjs  kill-ports.js  logged-server-wrapper-integration.js  (+26 more)
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.arm64.conf.json  tauri.conf.json  tauri.conf.json.bak  tauri.conf.json.orig  tauri.dev.conf.json  tauri.x64.conf.json  yume.exe.manifest  yurucode.exe.manifest
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: package-lock.json  package.json  server-bundled.cjs  server-claude-direct.cjs  server-claude-linux.cjs  server-claude-macos.cjs  server-claude-macos.cjs.backup  server-claude-macos.cjs.backup2  server-claude-macos.js  server-claude-windows.cjs  server-simple.cjs  server.cjs  wrapper-module.js  yume-cli-windows-x64.cmd
src-tauri/resources/.originals/: server-claude-direct.cjs  server-claude-linux.cjs  server-claude-windows.cjs  server.cjs
src-tauri/resources/yume-plugin/: README.md
src-tauri/resources/yume-plugin/.claude-plugin/: plugin.json
src-tauri/resources/yume-plugin/agents/: architect.md  explorer.md  guardian.md  implementer.md  specialist.md
src-tauri/resources/yume-plugin/commands/: commit.md  compact.md  init.md  iterate.md  review.md
src-tauri/resources/yume-plugin/hooks/: guard.md
src-tauri/resources/yume-vscode/: yume-0.1.2.vsix
src-tauri/resources/yurucode-plugin/: README.md
src-tauri/resources/yurucode-plugin/.claude-plugin/: plugin.json
src-tauri/resources/yurucode-plugin/agents/: architect.md  explorer.md  guardian.md  implementer.md  specialist.md
src-tauri/resources/yurucode-plugin/commands/: commit.md
src-tauri/resources/yurucode-plugin/hooks/: guard.md
src-tauri/resources/yurucode-vscode/: yurucode-0.1.1.vsix
src-tauri/src/: agents.rs  app.rs  background_agents.rs  bulletproof_server.rs  claude_binary.rs  claude_session.rs  claude_spawner.rs  config.rs  crash_recovery.rs  embedded_server.rs  final_server.rs  git_manager.rs  lib.rs  logged_server.rs  logged_server.rs.backup  logged_server_async.rs  main.rs  port_manager.rs  server_spawner.rs  simple_server.rs  stream_parser.rs  yume_cli_spawner.rs
src-tauri/src/claude/: mod.rs
src-tauri/src/commands/: background_agents.rs  claude_commands.rs  claude_detector.rs  claude_info.rs  compaction.rs  custom_commands.rs  database.rs  hooks.rs  mcp.rs  memory.rs  mod.rs  plugins.rs
src-tauri/src/compaction/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/hooks/: mod.rs
src-tauri/src/mcp/: mod.rs
src-tauri/src/process/: mod.rs  registry.rs
src-tauri/src/state/: mod.rs
src-tauri/src/websocket/: mod.rs
(+663 files in other folders)
