[package]
name = "yurucode"
version = "1.0.0"
description = "yuru code - Minimal UI for Claude CLI"
authors = ["yurucode"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.71"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "yurucode_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.13", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.0.0-rc.17", features = ["macos-private-api"] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-fs = "2.0.0-rc"
tauri-plugin-dialog = "2.0.0-rc"
tauri-plugin-shell = "2.0.0-rc"
tauri-plugin-store = "2.0.0-rc"
tauri-plugin-clipboard-manager = "2.0.0-rc"
tokio = { version = "1.40", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
lazy_static = "1.5"
once_cell = "1.19"
parking_lot = "0.12"
dashmap = "6.1"
bytes = "1.8"
async-trait = "0.1"
which = "6.0"
regex = "1.11"
rfd = "0.14"
native-dialog = "0.7"
dirs = "5.0"
walkdir = "2.4"
rand = "0.8"
# sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }  # Commented out for now
# notify = "6.1"  # Commented out for now

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi"] }

# Optimization profiles for smaller builds
[profile.release]
opt-level = "z"          # Optimize for size
lto = true               # Enable Link Time Optimization
codegen-units = 1        # Single codegen unit for better optimization
strip = true             # Strip symbols from binary
panic = "abort"          # Smaller panic handler

[profile.dev]
opt-level = 0            # No optimization for faster builds
debug = 0                # Disable debug info to reduce size (set to 2 if you need debugging)
strip = "debuginfo"      # Strip debug info only

# Further reduce build size
[profile.release.package."*"]
opt-level = "z"
strip = true

# Windows-specific settings to prevent console window
[target.'cfg(windows)']
version = "0.48"

[[bin]]
name = "yurucode"
path = "src/main.rs"

# This is important for Windows to not show console window
[package.metadata.tauri]
windows_subsystem = "windows"
