[package]
name = "yume"
version = "0.1.7"
description = "yume - Minimal UI for Claude CLI"
authors = ["aofp"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.71"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "yume_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.0.0-beta.16", features = ["macos-private-api"] }
tauri-plugin-log = "2.7"
tauri-plugin-fs = "2.4"
tauri-plugin-dialog = "2.4"
tauri-plugin-shell = "2.3"
tauri-plugin-store = "2.4"
tauri-plugin-clipboard-manager = "2.3"
tauri-plugin-single-instance = "2.3"
tokio = { version = "1.49", features = ["full"] }
tokio-tungstenite = "0.28"
futures-util = "0.3"
uuid = { version = "1.19", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1.21"
parking_lot = "0.12"
dashmap = "6.1"
which = "8.0"
regex = "1.12"
dirs = "6.0"
libc = "0.2"
reqwest = { version = "0.12", features = ["json"] }
walkdir = "2.5"
rand = "0.9"
rusqlite = { version = "0.38", features = ["bundled", "serde_json", "chrono"] }
base64 = "0.22"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
# sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }  # Commented out for now
# notify = "6.1"  # Commented out for now

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
] }
webview2-com = "0.38"





# Optimization profiles for maximum runtime speed + anti-reverse-engineering
[profile.release]
opt-level = 3            # Maximum speed optimization
lto = "fat"              # Full LTO for best cross-crate optimization
codegen-units = 1        # Single codegen unit for better optimization
strip = true             # Strip symbols from binary
panic = "abort"          # Faster panic handling, removes unwind info
debug = false            # No debug info
debug-assertions = false # Remove debug assertions
overflow-checks = false  # Remove overflow checks (slightly harder to analyze)
incremental = false      # Disable incremental for better optimization
rpath = false            # Don't embed runtime library paths

[profile.dev]
opt-level = 0
debug = 0
strip = "debuginfo"

# Optimize all dependencies for speed too
[profile.release.package."*"]
opt-level = 3
strip = true

[[bin]]
name = "yume"
path = "src/main.rs"

# This is important for Windows to not show console window
[package.metadata.tauri]
windows_subsystem = "windows"
